Bug 1769747 - Support non-RGBA video-to-texture fastpath. r=gfx-reviewers,nical

Also scale back some asserts from debug-fatal to just warnings, because
I kept hitting them during testing because of our poor surface lifetime
handling.

Differential Revision: https://phabricator.services.mozilla.com/D157993