dom/canvas/WebGLTextureUpload.cpp
@@ -691,12 +691,9 @@ GLenum DoCompressedTexSubImage(gl::GLContext* gl, TexImageTarget target,
   return errorScope.GetError();
 }
 
-static inline GLenum DoCopyTexSubImage(gl::GLContext* gl, TexImageTarget target,
-                                       GLint level, GLint xOffset,
-                                       GLint yOffset, GLint zOffset, GLint x,
-                                       GLint y, GLsizei width, GLsizei height) {
-  gl::GLContext::LocalErrorScope errorScope(*gl);
-
+void CopyTexSubImage(gl::GLContext* gl, TexImageTarget target, GLint level,
+                     GLint xOffset, GLint yOffset, GLint zOffset, GLint x,
+                     GLint y, GLsizei width, GLsizei height) {
   if (IsTarget3D(target)) {
     gl->fCopyTexSubImage3D(target.get(), level, xOffset, yOffset, zOffset, x, y,
                            width, height);
@@ -705,8 +702,6 @@ static inline GLenum DoCopyTexSubImage(gl::GLContext* gl, TexImageTarget target,
     gl->fCopyTexSubImage2D(target.get(), level, xOffset, yOffset, x, y, width,
                            height);
   }
-
-  return errorScope.GetError();
 }
 
 //////////////////////////////////////////////////////////////////////////////////////////
@@ -1791,12 +1786,15 @@ static bool DoCopyTexOrSubImage(WebGLContext* webgl, bool isSubImage,
     const auto& srcFormat = srcUsage->format;
     ScopedCopyTexImageSource maybeSwizzle(webgl, srcTotalWidth, srcTotalHeight,
                                           srcFormat, dstUsage);
-
-    error = DoCopyTexSubImage(gl, target, level, writeX, writeY, zOffset, readX,
-                              readY, rwWidth, rwHeight);
+    {
+      auto errorScope = gl::GLContext::LocalErrorScope(*gl);
+      CopyTexSubImage(gl, target, level, writeX, writeY, zOffset, readX, readY,
+                      rwWidth, rwHeight);
+      error = errorScope.GetError();
+    }
     if (error) {
       errorText = nsPrintfCString(
-          "DoCopyTexSubImage(0x%04x, %i, %i,%i,%i, %i,%i, %u,%u) -> 0x%04x",
+          "CopyTexSubImage(0x%04x, %i, %i,%i,%i, %i,%i, %u,%u) -> 0x%04x",
           target.get(), level, writeX, writeY, zOffset, readX, readY, rwWidth,
           rwHeight, error);
       break;
