gfx/gl/GLContext.h
@@ -580,6 +580,10 @@ class GLContext : public GenericAtomicRefCounted, public SupportsWeakPtr {
       mOldTop = mGL.GetError();
     }
 
+   private:
+    LocalErrorScope(const LocalErrorScope&) = default;
+
+   public:
     /// Never returns CONTEXT_LOST.
     GLenum GetError() {
       MOZ_ASSERT(!mHasBeenChecked);
